# tc

./: .gitignore  Cargo.toml  HISTORY.md  Makefile  README.md  data.json
files/: input_5.txt
src/: engine.rs  lib.rs  main.rs
src/engine/: core.rs  data.rs
tests/: engine.rs
tests/inputs/: input_1.txt  input_5.txt  input_6.txt  input_7.txt
