[package]
name = "tc"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Antonio Ricciardi <dev.roothunter@gmail.com>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
rustc-hash = "2"

[dev-dependencies]
log = "0.4"
env_logger = "0.11"
chrono = "0.4"