[package]
name = "tc"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Antonio Ricciardi <dev.roothunter@gmail.com>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
priority-queue = "2.1"
regex = "1"

[profile.release]
debug = true
#opt-level = 3   
#lto = "fat"       
#codegen-units = 1
#panic = "abort"     
#strip = true